# lgi

./: .cproject  .hgignore  .project  CMakeLists.txt  Distro.make  Installer.nsi  Lgi.dsp  Lgi.dsw  Lgi.proj  Lgi.sln  Lgi.vcproj  Lgi.xml  LgiLinux.xml  LgiStatic.dsp  LgiStatic.dsw  LgiStatic_vc10.sln  LgiStatic_vc10.vcxproj  LgiStatic_vc10.vcxproj.filters  LgiStatic_vc9.sln  LgiStatic_vc9.vcproj  LgiStatic_vs2013.vcxproj  LgiStatic_vs2015.vcxproj  LgiStatic_vs2019.vcxproj  LgiWin32.xml  Lgi_vc10(GTK).sln  Lgi_vc10(GTK).vcxproj  Lgi_vc10(GTK).vcxproj.filters  Lgi_vc10.sln  Lgi_vc10.vcxproj  Lgi_vc10.vcxproj.filters  Lgi_vc8(GTK).sln  Lgi_vc8(GTK).vcproj  Lgi_vc8.sln  Lgi_vc8.vcproj  Lgi_vc9(GTK).vcproj  Lgi_vc9.sln  Lgi_vc9.vcproj  Lgi_vs2010.sln  Lgi_vs2010.vcxproj  Lgi_vs2013.sln  (+21 more)
HtmlEditor/: CMakeLists.txt  HtmlEdit.vcxproj  HtmlEdit.vcxproj.filters  HtmlEdit_vs2008.sln  HtmlEdit_vs2008.vcproj  HtmlEdit_vs2013.sln  HtmlEdit_vs2013.vcxproj  HtmlEdit_vs2013.vcxproj.filters  HtmlEditor.xml  Info.plist  Rich.cpp  Rich.dsp  Rich.dsw  Rich.rc  Rich.sln  Rich.vcproj  resource.h
HtmlEditor/Gtk3/: CMakeLists.txt
HtmlEditor/HtmlEdit.xcodeproj/: matthew.mode1  matthew.pbxuser  project.pbxproj
HtmlEditor/Test/: Reply.html  Reply2.html
HtmlEditor/TestCases/: example.html  hr.html  reply-test.html  sig2.html
HtmlTest/Gtk3/: CMakeLists.txt
Ide/: CMakeLists.txt  LgiIde.proj  LgiIde.sln  LgiIde.xml  LgiIdeProj.xml  LgiIde_vs2013.sln  LgiIde_vs2013.vcxproj  LgiIde_vs2013.vcxproj.filters  LgiIde_vs2015.sln  LgiIde_vs2015.vcxproj  LgiIde_vs2015.vcxproj.filters  Makefile.cygwin  Makefile.haiku  Makefile.linux  Makefile.windows  buildHaiku.py  installer-zip.py
Ide/Code/: AddFtpFile.cpp  AddFtpFile.h  DebugContext.cpp  DebugContext.h  Debugger.cpp  Debugger.h  DocEdit.cpp  DocEdit.h  DocEditStyling.cpp  FindInFiles.cpp  FindInFiles.h  FindSymbol.cpp  FindSymbol.h  FtpFile.h  FtpThread.cpp  FtpThread.h  GDebugContext.cpp  GDebugContext.h  GDebugger.cpp  GDebugger.h  GHistory.cpp  GHistory.h  Grammer.cpp  Grammer2.cpp  History.cpp  IdeCommon.cpp  IdeDoc.cpp  IdeDoc.h  IdeDocPrivate.h  IdeProject.cpp  IdeProject.h  IdeProjectSettings.cpp  IdeProjectSettings.h  JavascriptParser.cpp  LgiIde.cpp  LgiIde.h  LgiUtils.cpp  MemDumpViewer.cpp  MissingFiles.cpp  NewProjectFromTemplate.cpp  (+14 more)
Ide/Gtk3/: CMakeLists.txt
Ide/Mac/: Info.plist  LgiIde_Prefix.pch
Ide/MacCocoa/: Info.plist
Ide/Resources/: LgiIde.lr8  Script1.rc  resdefs.h
Ide/haiku/: Makefile.haiku  buildHaiku.py
Ide/linux/: Makefile.linux
Ide/resources/: LgiIde.lr8  resdefs.h  resource.h
Ide/src/: AddFtpFile.cpp  AddFtpFile.h  Debugger.cpp  DocEdit.cpp  DocEditStyling.cpp  FindInFiles.cpp  FindSymbol.cpp  FindSymbol.h  FtpThread.cpp  Grammer2.cpp  IdeDoc.cpp  IdeDoc.h  IdeFindInFiles.cpp  IdeProject.cpp  IdeProject.h  IdeProjectSettings.cpp  LgiIde.cpp  LgiIde.h  LgiUtils.cpp  MemDumpViewer.cpp  MissingFiles.cpp  NewProjectFromTemplate.cpp  ProjectNode.cpp  ProjectNode.h  SimpleCppParser.cpp  SysCharSupport.cpp
Ide/win/: LgiIde.sln  LgiIde.vcxproj  LgiIde.vcxproj.filters  LgiIde_vs2015.sln  LgiIde_vs2015.vcxproj  LgiIde_vs2015.vcxproj.filters  Makefile.windows
LgiIde/: CMakeLists.txt  LgiIde.dsp  LgiIde.dsw  LgiIde.sln  LgiIde.vcproj  LgiIde.xml  LgiIde_GTK.sln  LgiIde_GTK.vcproj  LgiIde_vc8.sln  LgiIde_vc8.vcproj  LgiIde_vs2013.sln  LgiIde_vs2013.vcxproj  LgiIde_vs2013.vcxproj.filters  Makefile.haiku  Makefile.linux  Makefile.mingw  Makefile.win32  Makefile.windows
LgiIde/Code/: AddFtpFile.cpp  AddFtpFile.h  FindInFiles.cpp  FindInFiles.h  FindSymbol.cpp  FindSymbol.h  FtpFile.h  FtpThread.cpp  FtpThread.h  GDebugContext.cpp  GDebugger.cpp  GDebugger.h  GHistory.cpp  GHistory.h  Grammer.cpp  Grammer2.cpp  IdeCommon.cpp  IdeDoc.cpp  IdeDoc.h  IdeProject.cpp  IdeProject.h  IdeProjectSettings.cpp  IdeProjectSettings.h  LgiIde.cpp  LgiIde.h  LgiIde.lr8  LgiUtils.cpp  MemDumpViewer.cpp  MissingFiles.cpp  ProjectNode.cpp  ProjectNode.h  Script1.rc  SimpleCppParser.cpp  SimpleCppParser.h  SpaceTabConv.cpp  SysCharSupport.cpp  WebFldDlg.cpp  WebFldDlg.h  icon-haiku  icon64.icns  (+3 more)
LgiIde/Mac/: Info.plist
Lvc/: CMakeLists.txt  Lvc.sln  Lvc.vcxproj  Lvc.vcxproj.filters  LvcProject.xml  Main.cpp  Makefile.linux  installer-zip.py
Lvc/Mac/: Info.plist  Lvc_Prefix.pch
Lvc/MacCocoa/: Info.plist
Lvc/Resources/: Lvc.lr8  Lvc.rc  resdefs.h  resource.h
Lvc/Src/: BlameUi.cpp  DropDownBtn.cpp  Lvc.h  Main.cpp  PatchViewer.cpp  SshConnection.cpp  SshConnection.h  VcCommit.cpp  VcCommit.h  VcFile.cpp  VcFile.h  VcFolder.cpp  VcFolder.h  resdefs.h
Lvc/linux/: LvcProject.xml  Makefile.linux
Lvc/resources/: Lvc.lr8  resdefs.h
Lvc/src/: BlameUi.cpp  Lvc.h  Main.cpp  PatchViewer.cpp  SshConnection.cpp  SshConnection.h  VcCommit.cpp  VcCommit.h  VcFile.cpp  VcFile.h  VcFolder.cpp  VcFolder.h
Lvc/win/: Lvc.sln  Lvc.vcxproj  Lvc.vcxproj.filters
ResourceEditor/: CMakeLists.txt  Info.plist  Installer.nsi  LgiRes.sln  LgiRes.vcproj  LgiResProj.xml  LgiRes_vs2013.sln  LgiRes_vs2013.vcxproj  LgiRes_vs2013.vcxproj.filters  LgiRes_vs2015.sln  LgiRes_vs2015.vcxproj  Makefile.linux
ResourceEditor/Code/: LgiResApp.cpp  LgiResEdit.h  LgiRes_ControlTree.cpp  LgiRes_Css.cpp  LgiRes_Dialog.cpp  LgiRes_Dialog.h  LgiRes_Menu.cpp  LgiRes_Menu.h  LgiRes_String.cpp  LgiRes_String.h  LgiRes_TableLayout.cpp  Search.cpp  ShowLanguages.cpp
ResourceEditor/LgiRes.xcodeproj/: matthew.mode1v3  project.pbxproj
ResourceEditor/LrStrip/: do release compress.bat
ResourceEditor/MacCocoa/: Info.plist
ResourceEditor/src/: LgiResApp.cpp  (+6 more)
ScriptingUnitTests/: CMakeLists.txt  LgiScript.sln  LgiScript.vcxproj  LgiScript_vs2013.sln  Main.cpp  Test.py
SlogViewer/: CMakeLists.txt  Makefile.linux  SlogViewerProj.xml
Updater/: CMakeLists.txt  Main.cpp  Updater.manifest  Updater.sln  Updater.vcproj  Updater_vc9.sln  Updater_vc9.vcproj  Updater_vs2013.vcxproj  Updater_vs2015.vcxproj  Updater_vs2019.vcxproj
ide/: CMakeLists.txt  LgiIdeProj.xml  installer-zip.py
lvc/: CMakeLists.txt  LvcProject.xml
resourceEditor/: CMakeLists.txt  LgiResProj.xml  do debug.bat
(+2134 files in other folders)
